--- a/lerna.json
+++ b/lerna.json
@@ -1,16 +1,24 @@
 {
-  "version": "3.20.1",
+  "version": "3.20.2",
   "npmClient": "npm",
   "command": {
     "publish": {
-      "ignoreChanges": ["ignored-file", "*.md"],
+      "ignoreChanges": [
+        "ignored-file",
+        "*.md"
+      ],
       "message": "chore(release): publish",
       "registry": "https://registry.npmjs.com/"
     },
     "bootstrap": {
       "ignore": "*.stories.tsx",
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
-  "packages": ["src/components/**/*", ""]
+  "packages": [
+    "",
+    "src/components/**/*"
+  ]
 }
